--- a/FormValidator/index.html
+++ b/FormValidator/index.html
@@ -13,12 +13,12 @@
     <div class="container">
         <form id="form" class="form">
             <h2>Login with us</h2>
-            <div class="form-control success  ">
+            <div class="form-control   ">
                 <label for="username" class="username">Username</label>
                 <input type="text" id="username" placeholder="User Name" autofocus>
                 <small>Error Message</small>
             </div>
-            <div class="form-control error">
+            <div class="form-control ">
                 <label for="email">Email</label>
                 <input type="text" id="email" placeholder="Email">
                 <small>Error Message</small>
